fixed main page buttons on safari

--- a/attendance.css
+++ b/attendance.css
@@ -118,6 +118,8 @@ padding-bottom: 20px;
 
 .student_col_buttons {
     display: inline-flex;
+    display: -webkit-inline-flex;
+    display: -moz-inline-flex;
     vertical-align: middle;
     height: 25px;
 }
